Refactor student registration form and add formatting
Updated the HTML structure and content of the student registration form, including styling and added formatting elements.

--- a/HTML-5/class_03_6-12-2025/temporary_project/index.html
+++ b/HTML-5/class_03_6-12-2025/temporary_project/index.html
@@ -3,168 +3,92 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Student Registration Form</title>
-            <style>
-                body {
-                    font-family: Arial, sans-serif;
-                    margin: 20px;
-                    padding: 20px;
-                    background-color: #f4f4f4;
-                }
-                h1 {
-                    text-align: center;
-                }
-                form {
-                    background: #fff;
-                    padding: 20px;
-                    border-radius: 5px;
-                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-                    max-width: 600px;
-                    margin: auto;
-                }
-                div {
-                    margin-bottom: 15px;
-                }
-                label {
-                    display: block;
-                    margin-bottom: 5px;
-                }
-                div.g-h-c {
-                    display: flex;
-                    gap: 10px;
-                    align-items: center;
-                }
-                input[type="text"],
-                input[type="email"],
-                input[type="tel"],
-                input[type="date"],
-                select,
-                textarea {
-                    width: 100%;
-                    padding: 8px;
-                    box-sizing: border-box;
-                }
-                button {
-                    padding: 10px 15px;
-                    background-color: #28a745;
-                    color: white;
-                    border: none;
-                    border-radius: 5px;
-                    cursor: pointer;
-                }
-                button[type="reset"] {
-                    background-color: #dc3545;
-                }
-            </style>
+            <title>HTML Formatting Elements</title>
+        <style>
+            .c {
+                color: red;
+                background-color: rgba(222,222,222,0.3);
+            }
+            .bold {
+                font-weight: bold;
+            }
+            .border {
+                border: 2px solid gray;
+            }
+            .b-to-il {
+                display: inline;
+            }
+        </style>
         </head>
         <body>
-            <h1>Student Registration Form</h1>
-            <form action="post">
-                <div>
-                    <label for="f-name">First Name</label>
-                        <input type="text" name="f-name" id="f-name" placeholder="Enter your first name" autofocus required>
-                </div>
-                <div>
-                    <label for="l-name">Last Name</label>
-                        <input type="text" name="l-name" id="l-name" placeholder="Enter your last name" required>
-                </div>
-                <div>
-                    <label for="b-date">Date of Birth</label>
-                        <input type="date" name="b-date" id="b-date" required>
-                </div>
-                <div>
-                    <label for="email">Email Address</label>
-                        <input type="email" name="email" id="email" placeholder="Enter your email address" required>
-                </div>
-                <div>
-                    <label for="mobile-no">Mobile Number</label>
-                        <input type="tel" name="mobile-no" id="mobile-no" placeholder="Enter your mobile number" required>
-                </div>
-                <div class="g-h-c">
-                    <label id="gender">Gender</label>
-                        <input type="radio" name="gender" id="male">
-                    <label for="male">Male</label>
-                        <input type="radio" name="gender" id="female">
-                    <label for="female">Female</label>
-                        <input type="radio" name="gender" id="other">
-                    <label for="other">Other</label>
-                </div>
-                <div>
-                    <label for="address">Address</label>
-                        <textarea name="address" id="address" cols="30" rows="2" required></textarea>
-                </div>
-                <div>
-                    <label for="country">Country</label>
-                    <select name="country" id="country" required>
-                        <option value="country" disabled selected>Select your country</option>
-                        <option value="country">Pakistan</option>
-                        <option value="country">India</option>
-                        <option value="country">China</option>
-                        <option value="country">United States</option>
-                        <option value="country">Indonesia</option>
-                        <option value="country">Nigeria</option>
-                        <option value="country">Brazil</option>
-                        <option value="country">Bangladesh</option>
-                        <option value="country">Russia</option>
-                        <option value="country">Mexico</option>
-                        <option value="country">Other</option>
-                    </select>
-                <div>
-                    <label for="city">City</label>
-                    <select name="city" id="city" required>
-                        <option value="city" disabled selected>Select your city</option>
-                        <option value="city">Karachi</option>
-                        <option value="city">Lahore</option>
-                        <option value="city">Faisalabad</option>
-                        <option value="city">Rawalpindi</option>
-                        <option value="city">Gujranwala</option>
-                        <option value="city">Peshawar</option>
-                        <option value="city">Multan</option>
-                        <option value="city">Hyderabad</option>
-                        <option value="city">Islamabad</option>
-                        <option value="city">Quetta</option>
-                        <option value="city">Other</option>
-                    </select>
-                </div>
-                <div>
-                    <label for="postal-code">Postal Code</label>
-                        <input type="text" name="postal-code" id="postal-code" placeholder="Enter your code" required>
-                </div>
-                <div>
-                    <label for="hobbies">Hobbies</label>
-                        <input type="checkbox" name="hobbies" id="hobbies-sketching">
-                    <label for="hobbies-sketching">Sketching</label>
-                        <input type="checkbox" name="hobbies" id="hobbies-singing">
-                    <label for="hobbies-singing">Singing</label>
-                        <input type="checkbox" name="hobbies" id="hobbies-dancing">
-                    <label for="hobbies-dancing">Dancing</label>
-                        <input type="checkbox" name="hobbies" id="hobbies-gaming">
-                    <label for="hobbies-gaming">Gaming</label>
-                        <input type="checkbox" name="hobbies" id="hobbies-other">
-                    <label for="hobbies-other">Other</label>
-                </div>
-                <div class="g-h-c">
-                    <label for="qualification">Qualification</label>
-                    <select name="qualification" id="qualification" required>
-                        <option value="qualification">Select your qualification</option>
-                        <option value="qualification">Matric</option>
-                        <option value="qualification">Intermediate</option>
-                        <option value="qualification">Graduate</option>
-                    </select>
-                </div>
-                <div class="g-h-c">
-                    <label id="course">Course</label>
-                        <input type="radio" name="course" id="course-web-dev">
-                    <label for="course-web-dev">Web dev</label>
-                        <input type="radio" name="course" id="course-app-dev">
-                    <label for="course-app-dev">App dev</label>
-                        <input type="radio" name="course" id="course-ai">
-                    <label for="course-ai">AI</label>
-                </div>
-                <div>
-                    <button type="submit">Submit</button>
-                    <button type="reset">Reset</button>
-                </div>
-            </form>
+            <h1>HTML Formatting</h1>
+                <p><strong>HTML Formatting</strong> is used to format text on webpage.</p>
+            <h2>Text Formatting Elements</h2>
+                <p>HTML contains several elements for defining text with a special meaning.</p>
+            <ul>
+                <li><a href="#tfe1"><code><span class="c">&lt;b&gt;</span></code></a> &minus; Bold text</li>
+                <li><a href="#tfe2"><code><span class="c">&lt;strong&gt;</span></code></a> &minus; Important text</li>
+                <li><a href="#tfe3"><code><span class="c">&lt;i&gt;</span></code></a> &minus; Italic text</li>
+                <li><a href="#tfe4"><code><span class="c">&lt;em&gt;</span></code></a> &minus; Emphasized text</li>
+                <li><a href="#tfe5"><code><span class="c">&lt;u&gt;</span></code></a> &minus; Underline text</li>
+                <li><a href="#tfe6"><code><span class="c">&lt;mark&gt;</span></code></a> &minus; Marked &sol; Highlight text</li>
+                
+                <li><a href="#tfe7"><code><span class="c">&lt;del&gt;</span></code></a> &minus; Deleted text</li>
+                <li><a href="#tfe8"><code><span class="c">&lt;ins&gt;</span></code></a> &minus; Inserted text</li>
+                <li><a href="#tfe9"><code><span class="c">&lt;strike&gt;</span></code></a> &minus; Strike through text &lpar;Avoid to use&rpar;</li>
+                <li><a href="#tfe10"><code><span class="c">&lt;sub&gt;</span></code></a> &minus; Subscript text</li>
+                <li><a href="#tfe11"><code><span class="c">&lt;sup&gt;</span></code></a> &minus; Superscript text</li>
+                <li><a href="#tfe12"><code><span class="c">&lt;small&gt;</span></code></a> &minus; Smaller text</li>
+                <li><a href="#tfe13"><code><span class="c">&lt;big&gt;</span></code></a> &minus; Bigger text &lpar;Avoid to use&rpar;</li>
+                <li><a href="#tfe14"><code><span class="c">&lt;center&gt;</span></code></a> &minus; Centered HTML element &lpar;Avoid to use&rpar;</li>
+            </ul>
+            <h3 id="tfe1">HTML &lt;b&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;b&gt;</span> element defines bold text, without any extra importance.</p>
+                <p class="border"><strong>Example &colon;</strong> This text is <b>bold</b>.</p>
+            <h3 id="tfe2">HTML &lt;strong&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;strong&gt;</span> element defines text with strong importance. The content inside is typically displayed in bold.</p>
+                <p class="border"><strong>Example &colon;</strong> This text is <strong>important</strong>.</p>
+            <h3 id="tfe3">HTML &lt;i&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;i&gt;</span> element defines a part of text in an alternate voice or mood. The content inside is typically displayed in italic.</p>
+                <p><strong>Tip&colon;</strong> The <span class="c">&lt;i&gt;</span> tag is often used to indicate a technical term, a phrase from another language, a thought, a ship name, etc</p>
+                <p class="border"><strong>Example &colon;</strong> This text is <i>italic</i>.</p>
+            <h3 id="tfe4">HTML &lt;em&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;em&gt;</span> element defines emphasized text. The content inside is typically displayed in italic.</p>
+                <p><strong>Tip&colon;</strong> A screen reader will pronounce the words in <span class="c">&lt;em&gt;</span> with an emphasis, using verbal stress.</p>
+                <p class="border"><strong>Example &colon;</strong> This text is <em>emphasized</em>.</p>
+            <h3 id="tfe5">HTML &lt;u&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;u&gt;</span> element defines text that should be underlined.</p>
+                <p class="border"><strong>Example &colon;</strong> This is a <u>underlined</u> text.</p>
+            <h3 id="tfe6">HTML &lt;mark&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;mark&gt;</span> element defines text that should be marked or highlighted.</p>
+                <p class="border"><strong>Example &colon;</strong> This is a <mark>marked</mark> text.</p>
+            <h3 id="tfe7">HTML &lt;del&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;del&gt;</span> element defines text that has been deleted from a document. Browsers will usually strike a line through deleted text.</p>
+                <p class="border"><strong>Example &colon;</strong> My favorite color is <del>blue</del> red.</p>
+            <h3 id="tfe8">HTML &lt;ins&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;ins&gt;</span> element defines a text that has been inserted into a document. Browsers will usually underline inserted text.</p>
+                <p class="border"><strong>Example &colon;</strong> My favorite color is <del>blue</del> <ins>red</ins>.</p>
+            <h3 id="tfe9">HTML &lt;strike&gt; Elements &lpar;Avoid to use&rpar;</h3>
+                <p>The HTML <span class="c">&lt;strike&gt;</span> element defines text that has been strike through from a document. Browsers will usually strike a line through strike through text.</p>
+                <p class="border"><strong>Example &colon;</strong> My favorite color is <strike>blue</strike> red.</p>
+            <h3 id="tfe10">HTML &lt;sub&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;sub&gt;</span> element defines subscript text. Subscript text appears half a character below the normal line, and is sometimes rendered in a smaller font. Subscript text can be used to write chemical formulas.</p>
+                <p class="border"><strong>Example &colon;</strong> The chemical formula of water is H<sub>2</sub>O.</p>
+            <h3 id="tfe11">HTML &lt;sup&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;sup&gt;</span>  element defines superscript text. Superscript text appears half a character above the normal line, and is sometimes rendered in a smaller font. Superscript text can be used to write mathematical formulas.</p>
+                <p class="border"><strong>Example &colon;</strong> The mathematical formula &lpar;a &plus; b&rpar;<sup>2</sup> &equals; a<sup>2</sup> &plus; 2ab &plus; b<sup>2</sup>.</p>
+            <h3 id="tfe12">HTML &lt;small&gt; Elements</h3>
+                <p>The HTML <span class="c">&lt;small&gt;</span> element defines smaller text.</p>
+                <p class="border"><strong>Example &colon;</strong> This is some <small>smaller</small> text.</p>
+            <h3 id="tfe13">HTML &lt;big&gt; Elements &lpar;Avoid to use&rpar;</h3>
+                <p>The HTML <span class="c">&lt;big&gt;</span> element defines bigger text.</p>
+                <p class="border"><strong>Example &colon;</strong> This is some <big>bigger</big> text.</p>
+            <h3 id="tfe14">HTML &lt;center&gt; Elements &lpar;Avoid to use&rpar;</h3>
+                <p>The HTML <span class="c">&lt;center&gt;</span> element used to center HTML element.</p>
+                <center><p class="border"><strong>Example &colon;</strong> This is a center element.</p></center>
+            <h3 border>Note</h3>
+                <p><h3 class="b-to-il"><span class="c">&lt;h3&gt;</span></h3> <big><span class="c">&lt;big&gt;</span></big> &minus; are same size but <span class="c"></span>&lt;big&gt; is less bold than <span class="c"></span>&lt;h3&gt;.
+                <br>
+                <h4 class="b-to-il"><span class="c">&lt;h4&gt;</span></h4> <b><span class="c">&lt;b&gt;</span></b> <strong><span class="c">&lt;strong&gt;</span></strong> &minus; are same size and bold.</p>
         </body>
     </html>
